--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ minecraft_version=1.21
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.0.111-beta
+neo_version=21.0.143
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.0.0-beta,)
+neo_version_range=[21.0.143,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
@@ -30,7 +30,7 @@ loader_version_range=[4,)
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=cnc
 # The human-readable display name for the mod.
-mod_name=Crops n' Corpse
+mod_name=Crops 'n' Corpse
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Code: MIT | Art: CC-BY-NC-SA
 # The mod version. See https://semver.org/
