--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.world.entity.LivingEntity setLastArmorItem(Lnet/minecraft/world/entity/EquipmentSlot;Lnet/minecraft/world/item/ItemStack;)V # setLastArmorItem
 public net.minecraft.world.food.FoodProperties$Builder eatSeconds # eatSeconds
+public net.minecraft.world.entity.ai.control.LookControl lookAtCooldown # lookAtCooldown
+public net.minecraft.world.entity.ai.goal.LookAtPlayerGoal lookTime # lookTime
