--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,5 @@ public net.minecraft.world.entity.LivingEntity setLastArmorItem(Lnet/minecraft/w
 public net.minecraft.world.food.FoodProperties$Builder eatSeconds # eatSeconds
 public net.minecraft.world.entity.ai.control.LookControl lookAtCooldown # lookAtCooldown
 public net.minecraft.world.entity.ai.goal.LookAtPlayerGoal lookTime # lookTime
+public net.minecraft.client.renderer.entity.EntityRenderDispatcher renderers # renderers
+public net.minecraft.client.renderer.entity.LivingEntityRenderer model # model
