--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,4 @@ public net.minecraft.world.entity.ai.goal.LookAtPlayerGoal lookTime # lookTime
 public net.minecraft.client.renderer.entity.EntityRenderDispatcher renderers # renderers
 public net.minecraft.client.renderer.entity.LivingEntityRenderer model # model
 public net.minecraft.world.item.ItemStack item # item
+protected-f net.minecraft.world.level.block.Block stateDefinition # stateDefinition
