--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ loader_version_range=[4,)
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=cnc
 # The human-readable display name for the mod.
-mod_name=Crops 'n' Corpse
+mod_name=Crops 'n' Corpses
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Code: MIT | Art: CC-BY-NC-SA
 # The mod version. See https://semver.org/
